Closed Bug 519922 Opened 15 years ago Closed 15 years ago

Every typing in text field beeps with Japanese IME turned on

Categories

(Camino Graveyard :: General, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
Camino2.0

People

(Reporter: suishouen, Assigned: stuart.morgan+bugzilla)

References

Details

(Whiteboard: [camino-2.0])

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en; rv:1.9.0.15pre) Gecko/2009093000 Camino/2.0b5pre (like Firefox/3.0.15pre)
Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en; rv:1.9.0.15pre) Gecko/2009093000 Camino/2.0b5pre (like Firefox/3.0.15pre)

Every typing beeps with Japanese IME turned on in text field.
This problem happens on 2009-09-30-00-2.0-M1.9.
No problem on 2009-09-29-00-2.0-M1.9.
So related check-in an attachment 403544 [details] [diff] [review] of bug 379199 ?


Reproducible: Always

Steps to Reproduce:
1. Set Japanese IME on.
2. Go to http://www.google.co.jp/
3. Type "nihongo" in search field.
Summary: Every typing beeps with Japanese IME turned on in text field → Every typing in text field beeps with Japanese IME turned on
I backed out an attachment 403544 [details] [diff] [review] of bug 379199 and made a test build.
The test build has no problem, so I think this bug is attributed to an attachment 403544 [details] [diff] [review] of bug 379199 .
This is not limited to Japanese Input.
Typing composite characters (é, è, ü, î, etc) also beep.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attached patch fixSplinter Review
Luckily, we had a contingency plan in place in case of unexpected regressions like this: black-hole everything ourselves ;)

This fixes this bug, as well as fixing delete-as-back (bug 379812) and esc-as-stop handling (bug 405748). (The latter doesn't work with text fields and plugins focused, which may not have been the case back in 1.6, but it's the safer approach as esc has an IME meaning as well).
Assignee: nobody → stuart.morgan+bugzilla
Status: NEW → ASSIGNED
Attachment #404042 - Flags: superreview?(mikepinkerton)
Flags: camino2.0+
Target Milestone: --- → Camino2.0
Thanks, Stuart.
I applied the patch and made a test build.
The patch works fine as expected for this bug, bug 379812 and bug 405748.
Attachment #404042 - Flags: superreview?(mikepinkerton) → superreview+
Landed on CVS trunk and CAMINO_2_0_BRANCH.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: [camino-2.0]
Depends on: 520415
Verified with 2.1a1pre (1.9.0.16pre 2009100901)
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: