Camino only - Fix beeping during IME (bug 519922), delete to go back (bug 379812), and esc to stop (bug 405748). sr=pink